[tool.poetry]
name = "bamboo-core"
version = "0.10.3"
description = "General purpose server framework in Python"
authors = ["jjj999 <jjj999to@gmail.com>"]
maintainers = ["jjj999 <jjj999to@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://jjj999.github.io/bamboo"
repository = "https://github.com/jjj999/bamboo"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "bamboo" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
Hypercorn = "^0.11.2"
mkdocstrings = "^0.15.2"
mkdocs-material = "^7.1.11"
peewee = "^3.14.4"
pre-commit = "^2.13.0"
psycopg2-binary = "^2.9.1"
tox = "^3.24.0"
uvicorn = "^0.14.0"
websocket-client = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
