[metadata]
name = bamboo
version = attr: bamboo.__version__
url = https://github.com/jjj999/bamboo/
author = Yunhyeon Jeong
author_email = jjj999to@gmail.com
description = General purpose server framework in Python
long-description = file: README.md
licence = MIT

[options]
python_requires = >= 3.8
packages = find:
