[metadata]
name = bamboo_core
version = attr: bamboo.__version__
url = https://github.com/jjj999/bamboo/
author = Yunhyeon Jeong
author_email = jjj999to@gmail.com
description = General purpose server framework in Python
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT

[options]
python_requires = >= 3.8
packages = find:
